objects/Master_Course__c.object
<CustomObject>
    <description>An object that has a lookup relationship from Course Versions.</description>
    <label>Master Course</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Master Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Seeking_CME_CE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seeking CME/CE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Software__c</fullName>
        <label>Course Software</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Articulate</fullName>
                    <label>Articulate Studio</label>
                </value>
                <value>
                    <fullName>Storyline</fullName>
                </value>
                <value>
                    <fullName>Webinar</fullName>
                </value>
                <value>
                    <fullName>Rise</fullName>
                </value>
                <value>
                    <fullName>EPIC (Developed)</fullName>
                </value>
                <value>
                    <fullName>WebEx and Saba Assessment</fullName>
                </value>
                <value>
                    <fullName>VR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Audience__c</fullName>
        <label>Target Audience</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All Staff (not Board)</fullName>
                </value>
                <value>
                    <fullName>Board</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Communication / Marketing</fullName>
                </value>
                <value>
                    <fullName>Facility / Security</fullName>
                </value>
                <value>
                    <fullName>Information Technology / Online Services</fullName>
                </value>
                <value>
                    <fullName>Executive Management / Administrative Support Staff</fullName>
                </value>
                <value>
                    <fullName>Human Resources / Volunteer Support</fullName>
                </value>
                <value>
                    <fullName>Public Policy / Advocacy / Political Action</fullName>
                </value>
                <value>
                    <fullName>Accounting / Finance</fullName>
                </value>
                <value>
                    <fullName>Development / Fundraising</fullName>
                </value>
                <value>
                    <fullName>Medical Billing</fullName>
                </value>
                <value>
                    <fullName>Call Center</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Education / Communication Outreach</fullName>
                </value>
                <value>
                    <fullName>Patient Services Administrative Staff</fullName>
                </value>
                <value>
                    <fullName>Patient Services Clinical Staff</fullName>
                </value>
                <value>
                    <fullName>Patient Services Clinical Support Staff</fullName>
                </value>
                <value>
                    <fullName>National Office</fullName>
                </value>
                <value>
                    <fullName>ARMS</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>